Document behavior for latest nightly and Intellij 2021.3 RC3